iac-modules/extensions/kimi/vk3-v1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kimi-k3
spec:
  parentRefs:
  - name: main-gateway
    namespace: kgateway-system
  hostnames:
  - "inference-kimi-k3.nebius.internal"
  rules:
  - backendRefs:
    - name: kimi-k3
      port: 30000
